# rust-actix-diesel-auth0

./: .gitignore  .rustup  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.circleci/: config.yml
admin/: app-deployment.yaml.example  app-service.yaml  app-service.yaml.example
migrations/2021-06-07-140345_add_users/: up.sql
src/: auth.rs  config.rs  database.rs  errors.rs  handlers.rs  helpers.rs  main.rs  routes.rs  server.rs  state.rs
src/handlers/: health.rs  user.rs
src/models/: user.rs
src/tests/: helpers.rs
