[package]
name = "backend-rs"
version = "0.1.0"
authors = ["David Kerr <dakerr@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.2.1"
actix-rt = "1.0.0"
actix-service = "1.0.1"
actix-web = "2.0.0"
actix-web-httpauth = { git = "https://github.com/actix/actix-web-httpauth" }
alcoholic_jwt = "1.0.0"
chrono = { version = "0.4.10", features = ["serde"] }
derive_more = "0.99.2"
diesel = { version = "1.4.2", features = ["postgres","uuidv07", "r2d2", "chrono"] }
dotenv = "0.15.0"
env_logger = "0.6"
envy = "0.4"
futures = "0.3.1"
lazy_static = "1.4"
openssl = "0.10.34"
r2d2 = "0.8.8"
reqwest = "0.9.22"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.7", features = ["serde", "v4"] }

[dev-dependencies]
actix-http-test = "0.2.0"

[features]
postgres = []
default = ["postgres"]